--- a/www.ravidhirani.cz/portfolio/preview.html
+++ b/www.ravidhirani.cz/portfolio/preview.html
@@ -704,12 +704,12 @@
 			</div>
 		</div>
 	</div>
-	<div class="preview-themes">
+	<!-- <div class="preview-themes">
 		<a href="#theme-yellow-black" class="preview-theme preview-color-yellow-black" title="Select theme" data-toggle="tooltip" data-theme="dist/css/yellow-black.css" data-theme-bg="light"></a>
 		<a href="#theme-black-white" class="preview-theme preview-color-black-white" title="Select theme" data-toggle="tooltip" data-theme="dist/css/black-white.css" data-theme-bg="dark"></a>
 		<a href="#theme-pink-black" class="preview-theme preview-color-pink-black" title="Select theme" data-toggle="tooltip" data-theme="dist/css/pink-black.css" data-theme-bg="light"></a>
 		<a href="#theme-blue-black" class="preview-theme preview-color-blue-black" title="Select theme" data-toggle="tooltip" data-theme="dist/css/blue-black.css" data-theme-bg="light"></a>
-	</div>
+	</div> -->
 </body>
 <script src="dist/js/all.js"></script>
 <script>
