--- a/www.ravidhirani.cz/portfolio/index.html
+++ b/www.ravidhirani.cz/portfolio/index.html
@@ -32,7 +32,7 @@
 			<div class="app-root" v-bind:class="{'has-detail': isDetail, 'tiles-hidden': !areTilesVisible}">
 				<div class="tiles">
 					<div class="tile theme-green">
-						<img src="/assets/img/dd.jpg" class="tile-img" alt="Daniel Duran" />
+						<img src="/assets/img/dd.jpg" class="tile-img" alt="Ravi Dhirani" />
 						<div class="tile-text">
 							<h1 class="tile-title tile-title-lg">daniel duran</h1>
 							<p class="tile-caption">freelance webdeveloper</p>
