Updates to homepage

--- a/www.ravidhirani.cz/portfolio/preview.html
+++ b/www.ravidhirani.cz/portfolio/preview.html
@@ -9,13 +9,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,800&amp;display=swap" rel="stylesheet">
 	<link href="dist/css/yellow-black.css" rel="stylesheet">
 	<link href="dist/css/preview.css" rel="stylesheet">
-	<title>John Wilson | Portfolio</title>
+	<title>Ravi Dhirani | CV</title>
 </head>
 <body class="with-header position-relative" data-spy="scroll" data-target="#sections-nav" data-offset="80">
 	<header class="header">
 		<div class="container-fluid-limited d-flex align-items-center justify-content-between">
 			<a href="index.html" class="header-brand">
-				<img src="assets/img/logo_b.svg" data-light-src="assets/img/logo.svg" data-dark-src="assets/img/logo_b.svg" alt="Your logo">
+				<img src="assets/img/logo_b.svg" data-light-src="assets/img/logo.svg" data-dark-src="assets/img/RADprofile.jpg" alt="Your logo">
 			</a>
 			<button class="sections-nav-toggler" aria-label="Toggle navigation">
 				<span class="sections-nav-toggler-bar"></span>
@@ -89,8 +89,8 @@
 			</li>
 			<li class="sections-nav-item">
 				<div class="sections-nav-info">
-					<a href="mailto:john@wilson.com">john@wilson.com</a><br>
-					<a href="tel:+420652887351">+420 652 887 351</a>
+					<a href="mailto:ravidhirani@icloud.com">Ravi Dhirani</a><br>
+					<a href="tel:+420652887351">+44 773 9690 314</a>
 				</div>
 			</li>
 		</ul>
@@ -102,9 +102,9 @@
 					<section id="section-01" class="section section-sub-header animation interaction-in">
 						<div class="section-body">
 							<div class="jumbotron jumbotron-fluid pt-6 pt-lg-8 pb-0 mb-0">
-								<img src="assets/img/avatar.jpg" class="jumbotron-img animation-translate animation-item-1" alt="Avatar">
-								<h1 class="display-1 display-animated display-animated-in animation-translate animation-item-2">John<br>Wilson</h1>
-								<p class="lead animation-translate animation-item-3">FREELANCE WEBDEVELOPER</p>
+								<img src="assets/img/RADprofile.jpg" class="jumbotron-img animation-translate animation-item-1" alt="Avatar">
+								<h1 class="display-1 display-animated display-animated-in animation-translate animation-item-2">Ravi<br>Dhirani</h1>
+								<p class="lead animation-translate animation-item-3">DevSecOps Leader</p>
 							</div>
 						</div>
 						<div class="section-footer animation-translate animation-item-4">
@@ -486,7 +486,7 @@
 								<div class="col-12 col-md-4">
 									<div class="contact">
 										<strong class="contact-label">Stay in touch</strong>
-										<a href="mailto:john@wilson.com">john@wilson.com</a><br>
+										<a href="mailto:ravidhirani@icloud.com">ravidhirani@icloud.com</a><br>
 										<a href="tel:+420652887351">+420 652 887 351</a>
 									</div>
 								</div>
