--- a/www.ravidhirani.cz/portfolio/preview.html
+++ b/www.ravidhirani.cz/portfolio/preview.html
@@ -122,13 +122,9 @@
 									<h2 class="section-title animation-translate-overline animation-item-1">About me</h2>
 									<article class="article animation-translate animation-item-2">
 										<p>
-											I'm freelance webdeveloper lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-											diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
-											voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-											gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
-											amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-											dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo
-											dolores et ea rebum.
+											I'm a DevSecOps Lead Engineer, with a background in consulting. I began my IT career managing and shaping 
+											IT and Cyber policy for the Prince Charles. I founded a boutique IT consultancy that supports sustainable charities 
+											and their IT interests. 
 										</p>
 										<p>
 											Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
@@ -157,18 +153,18 @@
 					</section>
 					<section id="section-03" class="section animation">
 						<div class="section-body">
-							<h2 class="section-title animation-translate-overline animation-item-1">My services</h2>
+							<h2 class="section-title animation-translate-overline animation-item-1">My Services</h2>
 							<div class="row animation-translate animation-item-2">
 								<div class="col-12 col-md-4">
 									<div class="card card">
 										<div class="card-body">
 											<strong class="card-counter">1</strong>
-											<h3 class="card-title">Web<br>development</h3>
+											<h3 class="card-title">Technology<br>Leadership</h3>
 											<p class="card-text">
-												Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
-												nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam
-												erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-												et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est.
+												I have deliver a balance between technical delivery and management on projects 
+												enabling me to work in agile with my delivery team.
+												I am able to step in and troubleshoot technical issues, 
+												as well as take full ownership across multiple projects. 
 											</p>
 										</div>
 									</div>
@@ -177,7 +173,7 @@
 									<div class="card card">
 										<div class="card-body">
 											<strong class="card-counter">2</strong>
-											<h3 class="card-title">Web<br>design</h3>
+											<h3 class="card-title">CI/CD<br>Pipeline Building</h3>
 											<p class="card-text">
 												Stet clita kasd gubergren, no sea takimata sanctus est. Lorem ipsum
 												dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
@@ -191,7 +187,7 @@
 									<div class="card card">
 										<div class="card-body">
 											<strong class="card-counter">3</strong>
-											<h3 class="card-title">Web<br>consulting</h3>
+											<h3 class="card-title">Technology<br>Strategy</h3>
 											<p class="card-text">
 												At vero eos et accusam et justo duo dolores et ea rebum. Stet clita
 												kasd gubergren, no sea takimata sanctus est. Lorem ipsum dolor sit
@@ -216,29 +212,29 @@
 							<h2 class="section-title animation-translate-overline animation-item-1">Skills</h2>
 							<div class="row animation-translate animation-item-2">
 								<div class="col-12 col-md-6">
-									<strong class="progress-label">CSS</strong>
+									<strong class="progress-label">AWS</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-									<strong class="progress-label">Html</strong>
+									<strong class="progress-label">Azure</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-									<strong class="progress-label">Javascript</strong>
+									<strong class="progress-label">GCP</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
 								</div>
 								<div class="col-12 col-md-6">
-									<strong class="progress-label">Adobe XD</strong>
+									<strong class="progress-label">Terraform</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-									<strong class="progress-label">Photoshop</strong>
+									<strong class="progress-label">Python</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 87%" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
-									<strong class="progress-label">Sketch</strong>
+									<strong class="progress-label">Powershell</strong>
 									<div class="progress progress-animated mb-9">
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 									</div>
@@ -259,14 +255,14 @@
 							<div class="row animation-translate animation-item-2">
 								<div class="col-12 col-md-6 col-lg-3">
 									<div class="counter mb-6 mb-lg-0">
-										<span class="counter-label">Coffees / per day</span>
-										<span data-counter-from="0" data-counter-to="6">6</span>
+										<span class="counter-label">Millions of Pounds Saved:</span>
+										<span data-counter-from="0" data-counter-to="10000000">10000000</span>
 									</div>
 								</div>
 								<div class="col-12 col-md-6 col-lg-3">
 									<div class="counter mb-6 mb-lg-0">
 										<span class="counter-label">Launched websites</span>
-										<span data-counter-from="0" data-counter-to="64">64</span>
+										<span data-counter-from="0" data-counter-to="13">13</span>
 									</div>
 								</div>
 								<div class="col-12 col-md-6 col-lg-3">
@@ -278,7 +274,7 @@
 								<div class="col-12 col-md-6 col-lg-3">
 									<div class="counter">
 										<span class="counter-label">Happy clients</span>
-										<span data-counter-from="0" data-counter-to="160">160</span>
+										<span data-counter-from="0" data-counter-to="21">21</span>
 									</div>
 								</div>
 							</div>
