--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	<BR>
 	<BR>
   	<H6 ALIGN="RIGHT">
-	<I>Mirror and index made by HTTrack Website Copier [XR&amp;CO'2008]</I>
+	<I>Index made by HTTrack  [XR&amp;CO'2008]</I>
 	</H6>
 	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=www.ravidhirani.cz/portfolio/preview.html">
 
