Updates to projects

--- a/www.ravidhirani.cz/portfolio/preview.html
+++ b/www.ravidhirani.cz/portfolio/preview.html
@@ -473,7 +473,7 @@
 							<div class="row animation-translate animation-item-2">
 								<div class="col-12 col-md-4">
 									<a class="card" href="#modal-project-1" data-toggle="modal">
-										<img class="card-img-top" src="assets/img/project_1.jpg" alt="Nanovo">
+										<img class="card-img-top" src="assets/img/Mala Restaurant.png" alt="Nanovo">
 										<div class="card-body">
 											<h3 class="card-title">Mala Restaurant</h3>
 											<h4 class="card-subtitle">Website, Table Reservation and Click & Collect</h4>
@@ -483,7 +483,7 @@
 								</div>
 								<div class="col-12 col-md-4">
 									<a class="card" href="#modal-project-2" data-toggle="modal">
-										<img class="card-img-top" src="assets/img/project_2.jpg" alt="Bbop">
+										<img class="card-img-top" src="assets/img/Pat Pong Thai.png" alt="Bbop">
 										<div class="card-body">
 											<h3 class="card-title">Pat Pong Thai Restaurant</h3>
 											<h4 class="card-subtitle">Website, Table Reservation and Click & Collect</h4>
@@ -495,9 +495,9 @@
 									<a class="card" href="#modal-project-3" data-toggle="modal">
 										<img class="card-img-top" src="assets/img/project_3.jpg" alt="Janja Prokić">
 										<div class="card-body">
-											<h3 class="card-title">Janja Prokić</h3>
-											<h4 class="card-subtitle">Jewelry e-shop</h4>
-											<p class="card-tags">Frontend — Backend</p>
+											<h3 class="card-title">Centre for Climate Crime Analysis</h3>
+											<h4 class="card-subtitle">IT & Cyber Security Audit</h4>
+											<p class="card-tags">End-to-End IT Management</p>
 										</div>
 									</a>
 								</div>
