Updates to modals and paragraphs

--- a/www.ravidhirani.cz/portfolio/preview.html
+++ b/www.ravidhirani.cz/portfolio/preview.html
@@ -127,7 +127,7 @@
 											and their IT interests. 
 										</p>
 										<p>
-											For the last two years I have been the product owner of the E2E CI/CD Pipeline. During this time, the 
+											For the last two years I have been the product owner of an E2E CI/CD Pipeline. During this time, the 
 											pipeline won an award in the European Software Testing Awards. Key impacts include reducing the DORA Metrics Lead Time for Change, 
 											from 14 days to 2 days. 
 										</p>
@@ -321,7 +321,7 @@
 									<span class="timeline-date">August 2022&nbsp;–&nbsp;now</span>
 									<h3 class="timeline-title">UKHSA</h3>
 									<p class="timeline-text">Head of Non-functional Testing (through Capacitas Ltd)</p>
-
+									<!-- <a href="#modal-project-3" data-toggle="modal">Click to Read More</a> -->
 									<!-- <p>
 								-	Streamlined the Non-functional Test team size down from 12 FTE to 4 and maintained 0% defect leakage and 0% rejection rate since starting the role 18 months ago. <br>
 								-	Defined the Software Development Lifecycle framework to rationalise Test Management and Assurance processes across 27 product teams in 3 pillars at UKHSA. Resulting in the DORA Metrics Lead Time for Change being reduced from 14 days to 2 days. <br>
@@ -738,9 +738,9 @@
 				<div class="modal-body">
 					<article class="article">
 						<div class="article-header">
-							<h2 class="article-title">Janja Prokić</h2>
-							<h3 class="article-subtitle">Jewelry e-shop</h3>
-							<p class="article-tags">Frontend — Backend</p>
+							<h2 class="article-title">Centre for Climate Crime Analysis</h2>
+							<h3 class="article-subtitle">IT & Cyber Security Audit</h3>
+							<p class="article-tags">End-to-End IT Management</p>
 						</div>
 						<div class="row flex-column-reverse flex-lg-row">
 							<div class="col-12 col-lg-6">
