--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
   	<H6 ALIGN="RIGHT">
 	<I>Index made by HTTrack  [XR&amp;CO'2008]</I>
 	</H6>
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=www.ravidhirani.cz/portfolio/preview.html">
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=ravidhirani/portfolio/preview.html">
 
 
 <!-- ==================== Start epilogue ==================== -->
