--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 		<TR>
 			<TD BACKGROUND="fade.gif">
 				&middot;
-					<A HREF="www.ravidhirani.cz/portfolio/preview.html">
+					<A HREF="ravidhirani/portfolio/preview.html">
 						Ravi Dhirani | Portfolio
 					</A>		
 			</TD>
