commit modal changes

--- a/ravidhirani/portfolio/preview.html
+++ b/ravidhirani/portfolio/preview.html
@@ -321,7 +321,7 @@
 									<span class="timeline-date">August 2022&nbsp;–&nbsp;now</span>
 									<h3 class="timeline-title">UKHSA</h3>
 									<p class="timeline-text">Head of Non-functional Testing (through Capacitas Ltd)</p>
-									<!-- <a href="#modal-project-3" data-toggle="modal">Click to Read More</a> -->
+									<a href="#modal-UKHSA" data-toggle="modal">Click to Read More</a>
 									<!-- <p>
 								-	Streamlined the Non-functional Test team size down from 12 FTE to 4 and maintained 0% defect leakage and 0% rejection rate since starting the role 18 months ago. <br>
 								-	Defined the Software Development Lifecycle framework to rationalise Test Management and Assurance processes across 27 product teams in 3 pillars at UKHSA. Resulting in the DORA Metrics Lead Time for Change being reduced from 14 days to 2 days. <br>
@@ -571,31 +571,43 @@
 						<div class="section-body">
 							<h2 class="section-title animation-translate-overline animation-item-1">Contact</h2>
 							<div class="row mb-10 animation-translate animation-item-2">
-								<div class="col-12 col-md-4">
+								<div class="col-12 col-md-5">
 									<div class="contact">
 										<strong class="contact-label">Stay in touch</strong>
 										<a href="mailto:ravidhirani@icloud.com">ravidhirani@icloud.com</a><br>
 										<a href="tel:+420652887351">+420 652 887 351</a>
+										<br> 
+										<br>
 									</div>
 								</div>
-								<div class="col-12 col-md-4">
+								<div class="col-12 col-md-5">
+									<div class="contact">
+										<!-- <strong class="contact-label">Social</strong>
+										<a href="https://www.facebook.com/">Facebook</a><br>
+										<a href="https://www.linked.com/">LinekdIn</a><br>
+										<a href="https://www.twitter.com/">Twitter</a> -->
+									</div>
+								</div>
+								<div class="col-12 col-md-5">
 									<div class="contact">
 										<strong class="contact-label">Social</strong>
 										<a href="https://www.facebook.com/">Facebook</a><br>
 										<a href="https://www.linked.com/">LinekdIn</a><br>
 										<a href="https://www.twitter.com/">Twitter</a>
+										<br> 
+										<br>
 									</div>
 								</div>
-								<div class="col-12 col-md-4">
+								<div class="col-12 col-md-5">
 									<div class="contact">
-										<strong class="contact-label">Address</strong>
-										1234 Houston Street<br>
-										New York<br>
-										NY 123456<br>
+										<strong class="contact-label">Location</strong>
+										London<br>
+										England<br>
+										
 									</div>
 								</div>
 							</div>
-							<div class="row">
+							<!-- <div class="row">
 								<div class="col-12 col-xl-9">
 									<h3 class="section-subtitle animation-translate animation-item-3">Leave a message</h3>
 									<form class="needs-validation animation-translate animation-item-4" novalidate>
@@ -623,7 +635,7 @@
 										<button type="submit" class="btn btn-primary">Send</button>
 									</form>
 								</div>
-							</div>
+							</div> -->
 						</div>
 						<div class="section-footer animation-translate animation-item-5">
 							<span class="section-next goto-section">
@@ -778,6 +790,63 @@
 			</div>
 		</div>
 	</div>
+	<!-- Modals for Experience Section -->
+	<div id="modal-UKHSA" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+		<div class="modal-dialog modal-fluid">
+			<div class="modal-content">
+				<div class="modal-header">
+					&nbsp;
+					<button type="button" class="modal-close" data-dismiss="modal" aria-label="Close">
+						<span class="d-none">&times;</span>
+					</button>
+				</div>
+				<div class="modal-body">
+					<article class="article">
+						<div class="article-header">
+							<h2 class="article-title">UKHSA</h2>
+							<h3 class="article-subtitle">Head of Non-functional Testing & DevSecOps Strategy Lead</h3>
+							<p class="article-tags">DevSecOps and CI/CD Pipeline</p>
+						</div>
+						<div class="row flex-column-reverse flex-lg-row">
+							<div class="col-12 col-lg-6">
+								<p>
+								-	Streamlined the Non-functional Test team size down from 12 FTE to 4 and maintained 0% defect leakage and 0% rejection rate since starting the role 18 months ago. <br>
+								-	Defined the Software Development Lifecycle framework to rationalise Test Management and Assurance processes across 27 product teams in 3 pillars at UKHSA. Resulting in the DORA Metrics Lead Time for Change being reduced from 14 days to 2 days. <br>
+								-	Designed and built modularised and parameterised Terraform code to allow for future delivery teams to build infra in accordance with best practise and compliant with UKHSA security posture through a single Terraform Config file and Github Actions. <br>
+								-	In Q2 2023, conducted Cloud Cost Optimisation activities that led to the identification of over £6 million in savings for the client, surpassing the initial target of £1 million by 300%. Achieved through adoption and implementation of E2E pipelines, license audits, and maturity assessments. <br>
+								-	Product owner of E2E CI/CD Pipeline: Introduced and built self-healing generative AI test scripts, with Appvance AIQ software. This increased test coverage with AI driven scanning and reduced manual maintenance of scripts every month. <br>
+								-	As a qualified sustainability SME - mathematically validated and deployed a GreenOps dashboard that calculates granular data on Carbon emissions in Azure, AWS, and Google Cloud Platforms. This automated platform has saved months of manual effort from a 3 person team. Additionally designed mathematical models to validate all open-source models used by the dashboard. <br>
+								-	Defined a GreenOps Strategy Framework to enable developers to act on the telemetry provided by the GreenOps dashboard. This enabled efficiencies to be found at the application layer code, which reduced CPU consumption by 2% resulting in a £250,000 cloud saving in production. <br>
+								-	Introduced in-house Generative AI, using the Llama-2-70B, into the execution and analysis of performance tests and initiated the implementation of AI functional testing scripts for automating the quality assurance process on AWS. <br>
+								-	Designed volumetric ML models based on historical usage to forecast cloud spend and implemented self-hosted runners to optimise cloud hosting costs, resulting in an 80% reduction in monthly expenses for the client's AI toolset. <br>
+								-	Implemented SonarCloud, Checkov, OWASP ZAP Dependabot and IriusRisk into the DevSecOps CI/CD pipeline, enhancing cybersecurity resilience through automated scanning on GitHub repositories and Web-app endpoints. <br>
+								-	Developed bespoke Terraform orchestration to improve Cloud cost, notably saving a client £6,000 per week in just 6 minutes by identifying cost inefficiencies in Terraform code. <br>
+								-	Designed and built an Accessibility Tooling pipeline to automate accessibility testing that historically required outsourcing to a team of 10 people. Now the business uses 1 full time manual tester who utilises the automated pipeline underpinned by the axecore CLI. <br>
+								-	Designed and built an Accessibility Tooling pipeline to automate testing: Reducing the cost 10-fold – and now only requiring 1 full time resource to test 27 products utilising the pipeline, underpinned by the axecore CLI, Pa11y and Google Lighthouse. <br>
+								-	Developed full stack solution of Django Web Applications to support fast deployments using Docker containers. Enabled the business to deliver content publicly using bespoke framework for content delivery and anonymised user feedback, with built in two factor authentication. This work has been passed to prototyping team to underpin their work to deploy MVPs with zero lead time. This saves the business 12 business days in effort and allows for instantaneous user feedback. <br>
+								-	Designed and enforced FinOps NFRs across all products to guide delivery teams in cost saving activities – this improved IaC coverage, rationalised Github Repos and improved automated test coverage. <br>
+									</p>
+							</div>
+							<!-- <div class="col-12 col-lg-6">
+								<img class="img-fluid mb-10" src="assets/img/project_1.jpg" alt="Nanovo">
+							</div> -->
+						</div>
+					</article>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- End of Modals for Experience Section -->
+
+
+
+
+
+
+
+
+
+
 	<!-- <div class="preview-themes">
 		<a href="#theme-yellow-black" class="preview-theme preview-color-yellow-black" title="Select theme" data-toggle="tooltip" data-theme="dist/css/yellow-black.css" data-theme-bg="light"></a>
 		<a href="#theme-black-white" class="preview-theme preview-color-black-white" title="Select theme" data-toggle="tooltip" data-theme="dist/css/black-white.css" data-theme-bg="dark"></a>
