Remove div to fix padding and margin

--- a/ravidhirani/portfolio/preview.html
+++ b/ravidhirani/portfolio/preview.html
@@ -463,7 +463,7 @@
 									<span class="section-next-icon"></span>
 								</a>
 							</div>
-						</div>
+						<!-- </div> -->
 						
 						
 					</section>
